--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,4 +19,8 @@ spring.datasource.username=albert
 spring.datasource.password=1234
 
 # DDL OPTIONS: create-drop, create, update, none, validate
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
+
+# This will tell Spring Boot to execute the data.sql file
+# after the schema has been created.
+spring.jpa.defer-datasource-initialization=true
