--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,10 @@ spring.datasource.username=albert
 spring.datasource.password=1234
 
 # DDL OPTIONS: create-drop, create, update, none, validate
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
+# spring.jpa.show-sql=true
+# This will tell Spring Boot not to run the data.sql file
+spring.sql.init.mode=never
 
 # This will tell Spring Boot to execute the data.sql file
 # after the schema has been created.
